--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Benne&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <title>Hello, world!</title>
+    <title>Welcome to Chat app</title>
     <style>
       body{
     background-color: #dbdbdb;
@@ -244,7 +244,7 @@ input[type=text], select {
 <g>
 </g>
 </svg>
-          <a class="navbar-brand" href="#">DesphixsChat</a>
+          <a class="navbar-brand" href="#">Abdul's Chat</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -289,8 +289,8 @@ input[type=text], select {
             <input type="submit" value="Start Chat Now!">
         </form>
     </div>
-    <h5 >&copy;	Copyright Reserved Desphixs - 2021</h5>
-<h6>Made by Destiny Franks &hearts;	</h6>
+    <h5 >&copy;	Copyright Reserved Abdul Qadir - 2021</h5>
+<h6>Made by Abdul Qadir &hearts;	</h6>
 
 
 
